--- a/contact.html
+++ b/contact.html
@@ -30,20 +30,25 @@
 
       </nav>
 
-  <div class="container my-3 bg-light">
+  <!-- <div class="container my-3 bg-light"> -->
   <!--   <div class="row text-info">
-     <div class="col 12">
+     <div class="col-12">
        <h3>Contact</h3></div> -->
-       
+       <div class="row justify-content-center ">
+          <div class="col- 12 col-md-7">
+            <main class="container my-3 bg-light">
+              <div class="row text-info">
+                <div class="col-12">
+                  <h2>Contact</h2>
        <div class="row">
-         <div class="col-5">
-       <form action="/action_page.php">
+         <div class="col-12 col-md-5">
+      <!--  <form action="/action_page.php"> -->
         <!-- <div class="row form-inline"> -->
         <div class="form-group">
           <label for="usr">Name</label>
           <input type="text" class="form-control" id="usr" name="username">
         </div>
-        <div class="form-group">
+        <div class="form-group ">
           <label for="pwd">Email</label>
           <input type="email" class="form-control" id="pwd" name="email">
         </div>
@@ -57,9 +62,10 @@
     </div>
   </div>
 </div>
-</div>
-
-<div class="footer bg-dark text-light p-2 ">
+ -->
+<br>
+<br>
+<div class="footer bg-dark text-light p-1 ">
   <p>Copyright</p>
 </div>
 </body>
