--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,8 @@
 
 <body>
      <nav class="navbar navbar-expand-sm bg-white ">
-        <a class="navbar-brand bg-info text-white p-2 ml-5" href="#">
-          <h2>Lili Gugushvili</h2></a>
-
+        <a class="navbar-brand bg-info text-white  text-center p-2 ml-5" href="#">
+          <h2>Lili Gugushvili</h2> </a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">About</a>
@@ -30,20 +29,15 @@
 
       </nav>
 
-  <!-- <div class="container my-3 bg-light"> -->
-  <!--   <div class="row text-info">
-     <div class="col-12">
-       <h3>Contact</h3></div> -->
        <div class="row justify-content-center ">
-          <div class="col- 12 col-md-7">
+          <div class="col- 12 col-md-7 margin-bottom:3">
             <main class="container my-3 bg-light">
               <div class="row text-info">
                 <div class="col-12">
                   <h2>Contact</h2>
+                  <hr>
        <div class="row">
          <div class="col-12 col-md-5">
-      <!--  <form action="/action_page.php"> -->
-        <!-- <div class="row form-inline"> -->
         <div class="form-group">
           <label for="usr">Name</label>
           <input type="text" class="form-control" id="usr" name="username">
@@ -61,8 +55,7 @@
   </form>
     </div>
   </div>
-</div>
- -->
+</main>
 <br>
 <br>
 <div class="footer bg-dark text-light p-1 ">
