--- a/myportfolio.html
+++ b/myportfolio.html
@@ -31,28 +31,48 @@
 
   </nav>
 
-  <div class="container my-4 bg-light">
-    <!-- <div class="col-10"> -->
-         <div class="row">
-        <div class="card-1">
-          <!-- <div class="col-12 col-md-3"> -->
-            <!-- <div class="card-body"> -->
-              <img src="..images/apple.png">
-              <p class="card-text-center">Apple</p>
-            <!--   <div class="row"> -->
-                <div class="col-12 col-md-3">
-                  <div class="card-2">
-                    <!-- <div class="card-body"> -->
-                      <img class="card-img" src="..images/Flag.png-top">
-                      <p class="card-text-center">Flag</p>
-                    </div>
-                  
+  <main class="container my-4 bg-light col-md-8">
+    <div class="row text-info"></div>
+    <div class="card-deck"></div>
+    <div class="col-12 text-info">
+      <h2>Portfolio</h2>
+      <hr>
+    </div>
+    <div class="row">
+      <div class="card-1 col-md-3 m-3">
+        <img src="..images/apple.png">
+        <p class="card-text-center">Apple</p>
+      </div>
 
-            <br>
-            <br>
-            <div class="footer bg-dark text-light p-1 ">
-              <p>Copyright</p>
-            </div>
+      <div class="card-2 col-md-3 m-3">
+        <img class="card-img" src="..images/Flag.png-top">
+        <p class="card-text-center">Flag</p>
+
+      </div>
+
+      <div class="card-3 col-md-3 m-3">
+        <img class="card-img" src="..images/mario.png">
+        <p class="card-text-center">Mario</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="card-4 col-md-4 m-3">
+        <img class="card-img" src="..images/web design.png">
+        <p class="card-text-center">Web Design</p>
+      </div>
+
+      <div class="card-5 col-md-4 m-3">
+        <img class="card-img" src="..images/Tbilisi My City.jpg">
+        <p class="card-text-center">Tbilisi My City</p>
+      </div>
+    </div>
+    </div>
+  </main>
+  <br>
+  <br>
+  <div class="footer bg-dark text-light p-1">
+    <p>Copyright</p>
+  </div>
 </body>
 
 </html>
