--- a/myportfolio.html
+++ b/myportfolio.html
@@ -25,52 +25,52 @@
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link" href="myportfolio.html">Portfolio</a>
       </li>
     </ul>
 
   </nav>
 
-  <main class="container my-4 bg-light col-md-8">
+  <main class="container my-4 bg-light">
     <div class="row text-info"></div>
-    <div class="card-deck"></div>
-    <div class="col-12 text-info">
-      <h2>Portfolio</h2>
-      <hr>
-    </div>
+      <div class="card-deck"></div>
+        <div class="col-12 text-info">
+          <h2>Portfolio</h2>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="card-1 col-12 col-md-4">
+            <img class="card-img" src="assets/images/apple.png">
+            <p class="card-text">Apple</p>
+          </div>
+
+          <div class="card-2 col-12 col-md-4">
+            <img class="card-img" src="assets/images/Flag.png">
+            <p class="card-text">Flag</p>
+
+          </div>
+          <div class="card-3 col-12 col-md-4">
+            <img class="card-img" src="assets/images/mario.png">
+            <p class="card-text">Mario</p>
+          </div>
+       </div> 
     <div class="row">
-      <div class="card-1 col-md-3 m-3">
-        <img src="..images/apple.png">
-        <p class="card-text-center">Apple</p>
+      <div class="card-4 col-12 col-md-4">
+        <img class="card-img" src="assets/images/web design.png">
+        <p class="card-text">Web Design</p>
       </div>
 
-      <div class="card-2 col-md-3 m-3">
-        <img class="card-img" src="..images/Flag.png-top">
-        <p class="card-text-center">Flag</p>
-
+      <div class="card-5 col-12 col-md-4">
+        <img class="card-img" src="assets/images/Tbilisi My City.jpg">
+        <p class="card-text">Tbilisi My City</p>
       </div>
-
-      <div class="card-3 col-md-3 m-3">
-        <img class="card-img" src="..images/mario.png">
-        <p class="card-text-center">Mario</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="card-4 col-md-4 m-3">
-        <img class="card-img" src="..images/web design.png">
-        <p class="card-text-center">Web Design</p>
-      </div>
-
-      <div class="card-5 col-md-4 m-3">
-        <img class="card-img" src="..images/Tbilisi My City.jpg">
-        <p class="card-text-center">Tbilisi My City</p>
-      </div>
-    </div>
-    </div>
+   <!--  </div> -->
+    <!-- </div>
+ </div> -->
   </main>
   <br>
   <br>
-  <div class="footer bg-dark text-light p-1">
+ <div class="footer bg-dark text-light p-1">
     <p>Copyright</p>
   </div>
 </body>
