--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link" href="myportfolio.html">Portfolio</a>
       </li>
     </ul>
 
